--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <title>ola</title>
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body class="body">
